Updated pretrained model load

--- a/requirements.txt
+++ b/requirements.txt
@@ -60,3 +60,12 @@ greenplum-python
 torchvision
 accelerate
 tf-keras
+onnxruntime
+onnx
+ort-nightly
+--extra-index-url=https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/pypi/simple/
+--pre
+onnxruntime-genai
+--extra-index-url=https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-genai/pypi/simple/
+--pre
+.
